3 dolog amit akkarokm

--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
 
     <h1> Hello World!   retret9u8z78trez7z </h1>
     <h1>hurrá</h1>
+
+    <ul>kényér</ul>
+    <ul>tej</ul>
+    <ul>vaj</ul>
+
+
+
     
 </body>
 </html>
