--- a/index.html
+++ b/index.html
@@ -7,12 +7,7 @@
 </head>
 <body>
 
-    <h1> Hello World!   retret9u8z78trez7z </h1>
-    <h1>hurrá</h1>
-
-    <ul>kényér</ul>
-    <ul>tej</ul>
-    <ul>vaj</ul>
+    <link rel="styleshett"href="style.css">
 
 <h1>Számologép</h1>
 <button>1</button>
